--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -377,31 +377,31 @@
 
                                                         }
                                                         @if(item.isVote(item.getIdProduct,login )==login){
-                                                            @helper.form(action = routes.WineController.newRating) {
+                                                            @helper.form(action = routes.RatingController.newRating) {
                                                                 <input type="hidden" name="getIdProduct" value="@item.getIdProduct">
                                                                 <input type="hidden" name="rating" value="1">
 
                                                                 <input type="submit" class="btn btn-danger" value="1" />
                                                             }
-                                                            @helper.form(action = routes.WineController.newRating) {
+                                                            @helper.form(action = routes.RatingController.newRating) {
                                                                 <input type="hidden" name="getIdProduct" value="@item.getIdProduct">
                                                                 <input type="hidden" name="rating" value="2">
 
                                                                 <input type="submit" class="btn btn-danger" value="2" />
                                                             }
-                                                            @helper.form(action = routes.WineController.newRating) {
+                                                            @helper.form(action = routes.RatingController.newRating) {
                                                                 <input type="hidden" name="getIdProduct" value="@item.getIdProduct">
                                                                 <input type="hidden" name="rating" value="3">
 
                                                                 <input type="submit" class="btn btn-danger" value="3" />
                                                             }
-                                                            @helper.form(action = routes.WineController.newRating) {
+                                                            @helper.form(action = routes.RatingController.newRating) {
                                                                 <input type="hidden" name="getIdProduct" value="@item.getIdProduct">
                                                                 <input type="hidden" name="rating" value="4">
 
                                                                 <input type="submit" class="btn btn-danger" value="4" />
                                                             }
-                                                            @helper.form(action = routes.WineController.newRating) {
+                                                            @helper.form(action = routes.RatingController.newRating) {
                                                                 <input type="hidden" name="getIdProduct" value="@item.getIdProduct">
                                                                 <input type="hidden" name="rating" value="5">
 
