--- a/app/views/basketPage.scala.html
+++ b/app/views/basketPage.scala.html
@@ -241,7 +241,7 @@
                             <th>@item.getDegree</th>
 
                             <th>
-                                <button onclick="window.location.href = '@routes.BasketController.deleteFromBasket(item.getIdProduct,login,isAdmin)'"
+                                <button onclick="window.location.href = '@routes.BasketController.deleteFromBasket(item.getIdProduct,login)'"
                                 type="submit" class="btn btn-default btn-sm">
                                     <span class="glyphicon glyphicon-trash"></span>
                                 </button>
