--- a/app/views/basketPage.scala.html
+++ b/app/views/basketPage.scala.html
@@ -135,7 +135,7 @@
         </ul>
         <ul id="nav">
 
-            <li><a>@helper.form(action = routes.mainPageController.contactPage) {
+            <li><a>@helper.form(action = routes.ContactController.contactPage) {
                 <input type="submit" value="Контакты">
                 }</a>
             </li>
