--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -227,11 +227,11 @@
             <ul id="nav">
 
 
-                <li><a>@helper.form(action = routes.mainPageController.contactPage) {
+                <li><a>@helper.form(action = routes.ContactController.contactPage) {
                     <input type="submit" value="Контакты">
                     }</a>
                 </li>
-                <li><a>@helper.form(action = routes.mainPageController.contactPage) {
+                <li><a>@helper.form(action = routes.SaleController.showSales) {
                     <input type="submit" value="Акции">
                     }</a>
                 </li>
