--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -31,7 +31,7 @@
         </ul>
         <ul id="nav">
 
-            <li><a>@helper.form(action = routes.mainPageController.contactPage) {
+            <li><a>@helper.form(action = routes.ContactController.contactPage) {
                 <input type="submit" value="Контакты">
                 }</a>
             </li>
