--- a/app/views/usersRatingPage.scala.html
+++ b/app/views/usersRatingPage.scala.html
@@ -55,7 +55,7 @@
             <ul id="nav">
 
 
-                <li><a>@helper.form(action = routes.mainPageController.contactPage) {
+                <li><a>@helper.form(action = routes.ContactController.contactPage) {
                     <input type="submit" value="Контакты">
                     }</a>
                 </li>
