--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -136,9 +136,14 @@
 
                     <input type="submit" value="О проекте">
                     }</a></li>
-                <li><a>@helper.form(action = routes.BasketController.basketPage()) {
-
+                <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                    <input type="hidden" name="numberSql" value="0">
                     <input type="submit" value="Корзина">
+                    }</a></li>
+
+                <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                    <input type="hidden" name="numberSql" value="1">
+                    <input type="submit" value="Избранное">
                     }</a></li>
 
                 @if(isAdmin) {
