--- a/app/views/favoritePage.scala.html
+++ b/app/views/favoritePage.scala.html
@@ -132,7 +132,7 @@
             </ul>
             <ul id="nav">
 
-                <li><a>@helper.form(action = routes.mainPageController.contactPage) {
+                <li><a>@helper.form(action = routes.ContactController.contactPage) {
                     <input type="submit" value="Контакты">
                     }</a>
                 </li>
