--- a/app/views/contactPage.scala.html
+++ b/app/views/contactPage.scala.html
@@ -1,4 +1,4 @@
-@(login: String, isAdmin: Boolean, bookForm: play.data.Form[LoginForm], registrationForm: play.data.Form[User], error: Integer,contact:Seq[Contact])
+@(login: String, isAdmin: Boolean, bookForm: play.data.Form[LoginForm], registrationForm: play.data.Form[User], error: Integer,contact:Seq[contact])
 <html>
 
     <head>
